# chef

./: .gitignore  README.md  chef-professional-ui.html  drive.html  index.html  md5-workbench.tsx  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  锤子便签 - 锤子科技.html
.github/workflows/: build.yml
app/: globals.css  layout.tsx  page.tsx
app/styles/: app-shell.css  base.css  notes-tool.css  ocr-tool.css  todo-tool.css
docs/: overlay-transparency-notes.md  overlay-window-behavior.md  selection-screenshot-plan.md  tool-overview.md
share/: share-template.html
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: AppIcon.icns  icon-gallery-brand.html  icon-gallery-bright.html  icon-gallery-flat.html  icon-gallery-refined.html  icon-gallery-soft.html  icon-gallery-vscode.html  icon-gallery.html  icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: capture.rs  color_picker.rs  env_reader.rs  file_search.rs  file_share.rs  hosts.rs  mod.rs  network.rs  region_capture.rs  window_controls.rs
src-tauri/src/ocr/: engine.rs  mod.rs
src-tauri/src/utils/: time.rs
src-tauri/src/windowing/: manager.rs
src/components/ui/: badge.tsx  base-select.tsx  button.tsx  card.tsx  input.tsx  scroll-area.tsx  separator.tsx
src/data/: modules.ts
src/features/devtools/: BaseConverterTool.tsx  PayloadDiffTool.tsx  TimeConverterTool.tsx
src/features/encryption/: AesTool.tsx  Base64Tool.tsx  FileHashTool.tsx  Md5Tool.tsx  UrlCodecTool.tsx
src/features/icons/: IconConverterTool.tsx  SvgPreviewTool.tsx
src/features/icons/utils/: iconGenerator.ts
src/features/json/: JsonParser.tsx
src/features/network/: NetworkDoctorTool.tsx  NetworkInspectorTool.tsx
src/features/productivity/: NotesTool.tsx  TodoTool.tsx
src/features/system/: AwakeTool.tsx  ColorPickerTool.tsx  EnvVarTool.tsx  FileSearchTool.tsx  HostsTool.tsx  LanShareTool.tsx  RegionCaptureOverlay.tsx  ScreenshotTool.tsx
src/features/system/region-capture/: RegionCaptureEditor.tsx  RegionCaptureOverlay.tsx  regionCaptureTypes.ts
src/features/system/region-capture/editor/: RegionCaptureEditor.tsx  constants.ts  operations.ts  types.ts
src/features/system/region-capture/overlay/: RegionCaptureOverlay.tsx  (+3 more)
src/types/: crypto-js.d.ts
src/ui/: styles.ts
(+4 files in other folders)
