[package]
name = "chef"
version = "0.1.0"
description = "Chef desktop utility toolbox"
authors = ["czeong"]
license = "MIT"
edition = "2021"
rust-version = "1.75"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }
base64 = "0.22"
objc2-app-kit = "0.3.2"
objc2 = "0.6.3"
objc2-core-foundation = "0.3.2"
objc2-core-graphics = "0.3.2"
paddle-ocr-rs = "0.6.1"
ort = { version = "2.0.0-rc.10", default-features = false }

[build-dependencies]
tauri-build = { version = "2", features = [] }
