[package]
name = "chef"
version = "0.1.0"
description = "Chef desktop utility toolbox"
authors = ["czeong"]
license = "MIT"
edition = "2021"
rust-version = "1.75"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }
base64 = "0.22"
objc2-app-kit = { version = "0.3.2", features = ["NSColorSampler", "block2"] }
objc2 = "0.6.3"
objc2-core-foundation = "0.3.2"
objc2-core-graphics = "0.3.2"
objc2-foundation = "0.3.2"
block2 = "0.6"
paddle-ocr-rs = "0.6.1"
ort = { version = "2.0.0-rc.10", default-features = false }
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["io"] }
if-addrs = "0.11"
mime_guess = "2"
uuid = { version = "1", features = ["v4"] }
rfd = "0.14"
walkdir = "2"
once_cell = "1"
rust_search = "2.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
encoding_rs = "0.8"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[build-dependencies]
tauri-build = { version = "2", features = [] }
